move to RWT 4.0.0