@@ -7,23 +7,21 @@
  */
 package com.codeaffine.tiny.star;
 
-import static com.codeaffine.tiny.star.Texts.*;
-
-import static java.lang.String.format;
-import static lombok.AccessLevel.PACKAGE;
-
 import com.codeaffine.tiny.shared.ServiceLoaderAdapter;
-import com.codeaffine.tiny.star.spi.ServerConfiguration;
-
 import com.codeaffine.tiny.star.spi.Server;
+import com.codeaffine.tiny.star.spi.ServerConfiguration;
 import com.codeaffine.tiny.star.spi.ServerFactory;
+import lombok.NonNull;
+import lombok.RequiredArgsConstructor;
 
 import java.io.File;
 import java.util.List;
 import java.util.ServiceLoader;
 
-import lombok.NonNull;
-import lombok.RequiredArgsConstructor;
+import static com.codeaffine.tiny.star.Texts.ERROR_MORE_THAN_ONE_SERVER_FACTORY;
+import static com.codeaffine.tiny.star.Texts.ERROR_NO_SERVER_FACTORY_FOUND;
+import static java.lang.String.format;
+import static lombok.AccessLevel.PACKAGE;
 
 @RequiredArgsConstructor(access = PACKAGE)
 class DelegatingServerFactory implements ServerFactory {
@@ -51,7 +49,7 @@ class DelegatingServerFactory implements ServerFactory {
             throw new IllegalStateException(format(ERROR_MORE_THAN_ONE_SERVER_FACTORY, serviceLoaderAdapter.collectServiceTypeFactoryClassNames()));
         }
         return serverFactories
-            .get(0)
+            .getFirst()
             .create(configuration);
     }
 }
